// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditableRow > renders open 1`] = `
<div
  class="border-b border-palette-bg1 py-2 last:border-b-0"
>
  <div
    class="flex items-start gap-1"
  >
    <div
      class="grow"
    >
      <input
        aria-label="First name"
      />
    </div>
  </div>
</div>
`;

exports[`EditableRow > renders read-only 1`] = `
<div
  class="flex items-center justify-between gap-4 border-b border-palette-bg1 py-1 text-sm last:border-b-0"
>
  <span
    class="text-tip"
  >
    First name
  </span>
  <span
    class="flex items-center gap-1 text-right"
  >
    Mario
    <button
      aria-label="Change First name"
      class="rounded-box p-1 text-tip transition-colors hover:text-third focus-visible:text-third disabled:cursor-not-allowed disabled:opacity-40 disabled:hover:text-tip"
      title="Change First name"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 20h9"
        />
        <path
          d="M16.5 3.5a2.1 2.1 0 0 1 3 3L7 19l-4 1 1-4Z"
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`EditableRow > renders with a bin 1`] = `
<div
  class="flex items-center justify-between gap-4 border-b border-palette-bg1 py-1 text-sm last:border-b-0"
>
  <span
    class="text-tip"
  >
    lunedì
  </span>
  <span
    class="flex items-center gap-1 text-right"
  >
    11:30 – 14:30
    <button
      aria-label="Change lunedì"
      class="rounded-box p-1 text-tip transition-colors hover:text-third focus-visible:text-third disabled:cursor-not-allowed disabled:opacity-40 disabled:hover:text-tip"
      title="Change lunedì"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 20h9"
        />
        <path
          d="M16.5 3.5a2.1 2.1 0 0 1 3 3L7 19l-4 1 1-4Z"
        />
      </svg>
    </button>
    <button
      aria-label="Delete lunedì"
      class="rounded-box p-1 text-tip transition-colors hover:text-third focus-visible:text-third disabled:cursor-not-allowed disabled:opacity-40 disabled:hover:text-tip"
      title="Delete lunedì"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
      >
        <path
          d="M4 7h16"
        />
        <path
          d="M9 7V4h6v3"
        />
        <path
          d="m6 7 1 13h10l1-13"
        />
        <path
          d="M10 11v6"
        />
        <path
          d="M14 11v6"
        />
      </svg>
    </button>
  </span>
</div>
`;
